syntax = "proto3";

option go_package = "./rpc_gen";

message Base {
  optional string RequestID = 1;
}