syntax = "proto3";

option go_package = "./rpc_gen"; // in big projects separate packages

message FxServiceRequest {
  string SourceCurrencyCode = 1;
  string TargetCurrencyCode = 2;
}

message FxServiceResponse {
  string SourceCurrencyCode = 1;
  string TargetCurrencyCode = 2;
  double Rate = 3;
}

service FxService {
  rpc GetFxRate(FxServiceRequest) returns (FxServiceResponse) {}
}